客户端检测

--- a/Configs/Setup.ini
+++ b/Configs/Setup.ini
@@ -1,5 +1,5 @@
 [General]
-VersionPath=.\Mir2.Exe
+VersionPath=.\ClientVersionCheck\Client.Exe
 CheckVersion=True
 RelogDelay=50
 GMPassword=C#Mir 4.0
