服务器设置修改

--- a/Configs/Setup.ini
+++ b/Configs/Setup.ini
@@ -9,7 +9,7 @@ TestServer=False
 EnforceDBChecks=True
 
 [Network]
-IPAddress=127.0.0.1
+IPAddress=172.17.72.103
 Port=7000
 TimeOut=10000
 MaxUser=50
@@ -21,20 +21,20 @@ AllowChangePassword=True
 AllowLogin=True
 AllowNewCharacter=True
 AllowDeleteCharacter=True
-AllowStartGame=False
+AllowStartGame=True
 AllowCreateAssassin=True
 AllowCreateArcher=True
 MaxResolution=1024
 
 [Optional]
-SafeZoneBorder=False
-SafeZoneHealing=False
+SafeZoneBorder=True
+SafeZoneHealing=True
 GatherOrbsPerLevel=True
 ExpMobLevelDifference=True
-GameMasterEffect=False
+GameMasterEffect=True
 
 [Database]
-SaveDelay=5
+SaveDelay=1440
 CredxGold=30
 
 [Game]
