恢复服务器设置.

--- a/Configs/Setup.ini
+++ b/Configs/Setup.ini
@@ -1,6 +1,6 @@
 [General]
-VersionPath=.\Mir2.Exe
-CheckVersion=False
+VersionPath=.\ClientVersionCheck\Client.Exe
+CheckVersion=True
 RelogDelay=50
 GMPassword=C#Mir 4.0
 Multithreaded=True
@@ -9,7 +9,7 @@ TestServer=False
 EnforceDBChecks=True
 
 [Network]
-IPAddress=127.0.0.1
+IPAddress=172.17.72.103
 Port=7000
 TimeOut=10000
 MaxUser=50
@@ -27,21 +27,20 @@ AllowCreateArcher=True
 MaxResolution=1024
 
 [Optional]
-SafeZoneBorder=False
-SafeZoneHealing=False
+SafeZoneBorder=True
+SafeZoneHealing=True
 GatherOrbsPerLevel=True
 ExpMobLevelDifference=True
-GameMasterEffect=False
+GameMasterEffect=True
 
 [Database]
-SaveDelay=5
+SaveDelay=1440
 CredxGold=30
 
 [Game]
 DropRate=1
 ExpRate=1
 ItemTimeOut=30
-PlayerDiedItemTimeOut=120
 PetTimeOut=5
 PetSave=False
 PKDelay=12
@@ -55,25 +54,10 @@ Zuma4=WedgeMoth
 Zuma5=ZumaArcher3
 Zuma6=ZumaStatue3
 Zuma7=ZumaGuardian3
-Turtle1=RedTurtle
-Turtle2=GreenTurtle
-Turtle3=BlueTurtle
-Turtle4=TowerTurtle
-Turtle5=FinialTurtle
 BoneMonster1=BoneSpearman
 BoneMonster2=BoneBlademan
 BoneMonster3=BoneArcher
 BoneMonster4=BoneCaptain
-BehemothMonster1=Hugger
-BehemothMonster2=PoisonHugger
-BehemothMonster3=MutatedHugger
-HellKnight1=HellKnight1
-HellKnight2=HellKnight2
-HellKnight3=HellKnight3
-HellKnight4=HellKnight4
-HellBomb1=HellBomb1
-HellBomb2=HellBomb2
-HellBomb3=HellBomb3
 WhiteSnake=WhiteSerpent
 AngelName=HolyDeva
 BombSpiderName=BombSpider
@@ -84,12 +68,22 @@ VampireName=VampireSpider
 ToadName=SpittingToad
 SnakeTotemName=SnakeTotem
 SnakesName=CharmedSnake
-
-[Rested]
-Period=60
-BuffLength=10
-ExpBonus=5
-MaxBonus=24
+PlayerDiedItemTimeOut=120
+Turtle1=RedTurtle
+Turtle2=GreenTurtle
+Turtle3=BlueTurtle
+Turtle4=TowerTurtle
+Turtle5=FinialTurtle
+BehemothMonster1=Hugger
+BehemothMonster2=PoisonHugger
+BehemothMonster3=MutatedHugger
+HellKnight1=HellKnight1
+HellKnight2=HellKnight2
+HellKnight3=HellKnight3
+HellKnight4=HellKnight4
+HellBomb1=HellBomb1
+HellBomb2=HellBomb2
+HellBomb3=HellBomb3
 
 [Items]
 HealRing=Healing
@@ -125,6 +119,126 @@ PKTownPositionY=677
 DropGold=True
 MaxDropGold=2000
 
+[Warrior]
+HpGain=4
+HpGainRate=4.5
+MpGainRate=0
+BagWeightGain=3
+WearWeightGain=20
+HandWeightGain=13
+MinAc=0
+MaxAc=7
+MinMac=0
+MaxMac=0
+MinDc=5
+MaxDc=5
+MinMc=0
+MaxMc=0
+MinSc=0
+MaxSc=0
+StartAgility=15
+StartAccuracy=5
+StartCriticalRate=0
+StartCriticalDamage=0
+CritialRateGain=0
+CriticalDamageGain=0
+
+[Wizard]
+HpGain=15
+HpGainRate=1.8
+MpGainRate=0
+BagWeightGain=5
+WearWeightGain=100
+HandWeightGain=90
+MinAc=0
+MaxAc=0
+MinMac=0
+MaxMac=0
+MinDc=7
+MaxDc=7
+MinMc=7
+MaxMc=7
+MinSc=0
+MaxSc=0
+StartAgility=15
+StartAccuracy=5
+StartCriticalRate=0
+StartCriticalDamage=0
+CritialRateGain=0
+CriticalDamageGain=0
+
+[Taoist]
+HpGain=6
+HpGainRate=2.5
+MpGainRate=0
+BagWeightGain=4
+WearWeightGain=50
+HandWeightGain=42
+MinAc=0
+MaxAc=0
+MinMac=12
+MaxMac=6
+MinDc=7
+MaxDc=7
+MinMc=0
+MaxMc=0
+MinSc=7
+MaxSc=7
+StartAgility=18
+StartAccuracy=5
+StartCriticalRate=0
+StartCriticalDamage=0
+CritialRateGain=0
+CriticalDamageGain=0
+
+[Assassin]
+HpGain=4
+HpGainRate=3.25
+MpGainRate=0
+BagWeightGain=3.5
+WearWeightGain=33
+HandWeightGain=30
+MinAc=0
+MaxAc=0
+MinMac=0
+MaxMac=0
+MinDc=8
+MaxDc=8
+MinMc=0
+MaxMc=0
+MinSc=0
+MaxSc=0
+StartAgility=20
+StartAccuracy=5
+StartCriticalRate=0
+StartCriticalDamage=0
+CritialRateGain=0
+CriticalDamageGain=0
+
+[Archer]
+HpGain=4
+HpGainRate=3.25
+MpGainRate=0
+BagWeightGain=4
+WearWeightGain=33
+HandWeightGain=30
+MinAc=0
+MaxAc=0
+MinMac=0
+MaxMac=0
+MinDc=8
+MaxDc=8
+MinMc=8
+MaxMc=8
+MinSc=0
+MaxSc=0
+StartAgility=15
+StartAccuracy=8
+StartCriticalRate=0
+StartCriticalDamage=0
+CritialRateGain=0
+CriticalDamageGain=0
+
 [IntelligentCreatures]
 Creature0Name=BabyPig
 Creature1Name=Chick
@@ -137,6 +251,12 @@ Creature7Name=BabyDragon
 Creature8Name=OlympicFlame
 Creature9Name=BabySnowMan
 Creature10Name=Frog
+CreatureBlackStoneName=BlackCreatureStone
 Creature11Name=BabyMonkey
 Creature12Name=AngryBird
-CreatureBlackStoneName=BlackCreatureStone
+
+[Rested]
+Period=60
+BuffLength=10
+ExpBonus=5
+MaxBonus=24
