服务器设置更新.

--- a/Configs/FishingSystem.ini
+++ b/Configs/FishingSystem.ini
@@ -1,4 +1,4 @@
-[Rates]
+﻿[Rates]
 Attempts=30
 SuccessStart=10
 SuccessMultiplier=10
@@ -6,4 +6,4 @@ Delay=0
 MonsterSpawnChance=5
 
 [Game]
-Monster=GiantKeratoid
+Monster=巨型多角虫
