--- a/Configs/Setup.ini
+++ b/Configs/Setup.ini
@@ -44,29 +44,29 @@ ItemTimeOut=30
 PetTimeOut=5
 PetSave=False
 PKDelay=12
-SkeletonName=BoneFamiliar
-BugBatName=BugBat
-ShinsuName=Shinsu
-Zuma1=ZumaStatue
-Zuma2=ZumaGuardian
-Zuma3=ZumaArcher
-Zuma4=WedgeMoth
-Zuma5=ZumaArcher3
-Zuma6=ZumaStatue3
-Zuma7=ZumaGuardian3
-BoneMonster1=BoneSpearman
-BoneMonster2=BoneBlademan
-BoneMonster3=BoneArcher
-BoneMonster4=BoneCaptain
-WhiteSnake=WhiteSerpent
-AngelName=HolyDeva
-BombSpiderName=BombSpider
+SkeletonName=骷髅护卫
+BugBatName=小蝙蝠
+ShinsuName=神兽
+Zuma1=祖玛雕像
+Zuma2=祖玛卫士
+Zuma3=祖玛弓箭手
+Zuma4=楔蛾
+Zuma5=祖玛弓箭手3
+Zuma6=祖玛弓箭手3
+Zuma7=祖玛卫士3
+BoneMonster1=骷髅长枪兵
+BoneMonster2=骷髅刀斧手
+BoneMonster3=骷髅弓箭手
+BoneMonster4=骷髅锤兵
+WhiteSnake=白蛇
+AngelName=月灵
+BombSpiderName=爆蛛
 CloneName=Clone
-FishMonster=GiantKeratoid
+FishMonster=巨型多角虫
 AssassinCloneName=AssassinClone
-VampireName=VampireSpider
-ToadName=SpittingToad
-SnakeTotemName=SnakeTotem
+VampireName=自爆蜘蛛
+ToadName=火蟾
+SnakeTotemName=蛇柱
 SnakesName=CharmedSnake
 PlayerDiedItemTimeOut=120
 Turtle1=RedTurtle
@@ -84,6 +84,7 @@ HellKnight4=HellKnight4
 HellBomb1=HellBomb1
 HellBomb2=HellBomb2
 HellBomb3=HellBomb3
+
 
 [Items]
 HealRing=Healing
