关闭服务器端多线程开关,以解决怪物迟钝问题.

--- a/Configs/Setup.ini
+++ b/Configs/Setup.ini
@@ -3,8 +3,8 @@ VersionPath=.\ClientVersionCheck\Client.Exe
 CheckVersion=True
 RelogDelay=50
 GMPassword=C#Mir 4.0
-Multithreaded=True
-ThreadLimit=2
+Multithreaded=False
+ThreadLimit=1
 TestServer=False
 EnforceDBChecks=True
 
