用户数据库备份,服务器配置更新.

--- a/Configs/GuildSettings.ini
+++ b/Configs/GuildSettings.ini
@@ -17,7 +17,7 @@ Level-6=1
 Level-7=1
 Level-8=1
 Level-9=1
-Level-10=1
+Level-10=1100000000
 Level-11=1
 Level-12=1
 Level-13=1
@@ -27,7 +27,7 @@ Level-16=1
 Level-17=1
 Level-18=1
 Level-19=1
-Level-20=1
+Level-20=100000000
 Level-21=-1
 
 [Cap]
@@ -59,7 +59,7 @@ ItemName=
 Amount=1000000
 
 [Required-1]
-ItemName=WoomaHorn
+ItemName=沃玛号角
 Amount=1
 
 [Buff-0]
