--- a/Configs/RefineSystem.ini
+++ b/Configs/RefineSystem.ini
@@ -1,4 +1,4 @@
-[Config]
+﻿[Config]
 OnlyRefineWeapon=True
 BaseChance=20
 Time=20
@@ -10,4 +10,4 @@ ItemStatReducedChance=15
 RefineCost=125
 
 [Ore]
-OreName=BlackIronOre
+OreName=黑铁矿
