--- a/Configs/Setup.ini
+++ b/Configs/Setup.ini
@@ -23,12 +23,12 @@ AllowNewCharacter=True
 AllowDeleteCharacter=True
 AllowStartGame=True
 AllowCreateAssassin=True
-AllowCreateArcher=True
+AllowCreateArcher=False
 MaxResolution=1024
 
 [Optional]
-SafeZoneBorder=True
-SafeZoneHealing=True
+SafeZoneBorder=False
+SafeZoneHealing=False
 GatherOrbsPerLevel=True
 ExpMobLevelDifference=True
 GameMasterEffect=True
@@ -87,8 +87,8 @@ HellBomb3=HellBomb3
 
 
 [Items]
-HealRing=Healing
-FireRing=FireBall
+HealRing=治愈术
+FireRing=火球术
 MaxMagicResist=6
 MagicResistWeight=10
 MaxPoisonResist=6
@@ -106,10 +106,10 @@ HealthRegenWeight=10
 MaxManaRegen=8
 ManaRegenWeight=10
 MaxPoisonRecovery=6
-MaxLuck=10
-PvpCanResistMagic=False
-PvpCanResistPoison=False
-PvpCanFreeze=False
+MaxLuck=9
+PvpCanResistMagic=True
+PvpCanResistPoison=True
+PvpCanFreeze=True
 
 [PKTown]
 PKTownMapName=3
