服务器配置更新

--- a/Configs/Setup.ini
+++ b/Configs/Setup.ini
@@ -27,8 +27,8 @@ AllowCreateArcher=False
 MaxResolution=1024
 
 [Optional]
-SafeZoneBorder=False
-SafeZoneHealing=False
+SafeZoneBorder=True
+SafeZoneHealing=True
 GatherOrbsPerLevel=True
 ExpMobLevelDifference=True
 GameMasterEffect=True
@@ -110,6 +110,7 @@ MaxLuck=9
 PvpCanResistMagic=True
 PvpCanResistPoison=True
 PvpCanFreeze=True
+BlinkSkill=Blink
 
 [PKTown]
 PKTownMapName=3
@@ -255,6 +256,7 @@ Creature10Name=Frog
 CreatureBlackStoneName=BlackCreatureStone
 Creature11Name=BabyMonkey
 Creature12Name=AngryBird
+Creature13Name=Foxey
 
 [Rested]
 Period=60
