行会BUFF与韩服看齐。

--- a/Configs/GuildSettings.ini
+++ b/Configs/GuildSettings.ini
@@ -68,7 +68,7 @@ Icon=24
 Name=Reputation
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
 BuffMAC=0
@@ -95,7 +95,7 @@ Icon=27
 Name=Specialized Crafter
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
 BuffMAC=0
@@ -122,7 +122,7 @@ Icon=30
 Name=Specialized Miner
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
 BuffMAC=0
@@ -149,7 +149,7 @@ Icon=33
 Name=Gem Success Rate
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
 BuffMAC=0
@@ -176,7 +176,7 @@ Icon=36
 Name=Specialized Fisher
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
 BuffMAC=0
@@ -203,7 +203,7 @@ Icon=39
 Name=Skill Experiance
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
 BuffMAC=0
@@ -217,7 +217,7 @@ BuffGemRate=0
 BuffFishRate=0
 BuffExpRate=0
 BuffCraftRate=0
-BuffSkillRate=1
+BuffSkillRate=3
 BuffHpRegen=0
 BuffMpRegen=0
 BuffAttack=0
@@ -230,7 +230,7 @@ Icon=42
 Name=Field Experience
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
 BuffMAC=0
@@ -242,7 +242,7 @@ BuffMaxMp=0
 BuffMineRate=0
 BuffGemRate=0
 BuffFishRate=0
-BuffExpRate=4
+BuffExpRate=20
 BuffCraftRate=0
 BuffSkillRate=0
 BuffHpRegen=0
@@ -254,14 +254,14 @@ BuffGoldRate=0
 [Buff-7]
 Id=8
 Icon=45
-Name=Hero Experience
+Name=DC Buff
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
 BuffMAC=0
-BuffDc=0
+BuffDc=3
 BuffMc=0
 BuffSc=0
 BuffMaxHp=0
@@ -284,14 +284,14 @@ Icon=6
 Name=Max Health
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
 BuffMAC=0
 BuffDc=0
 BuffMc=0
 BuffSc=0
-BuffMaxHp=20
+BuffMaxHp=100
 BuffMaxMp=0
 BuffMineRate=0
 BuffGemRate=0
@@ -311,7 +311,7 @@ Icon=9
 Name=Max Mana
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
 BuffMAC=0
@@ -319,7 +319,7 @@ BuffDc=0
 BuffMc=0
 BuffSc=0
 BuffMaxHp=0
-BuffMaxMp=20
+BuffMaxMp=100
 BuffMineRate=0
 BuffGemRate=0
 BuffFishRate=0
@@ -338,9 +338,9 @@ Icon=12
 Name=Physical Defence
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
-BuffAc=0
+BuffAc=10
 BuffMAC=0
 BuffDc=0
 BuffMc=0
@@ -365,7 +365,7 @@ Icon=0
 Name=Health Recovery
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
 BuffMAC=0
@@ -380,7 +380,7 @@ BuffFishRate=0
 BuffExpRate=0
 BuffCraftRate=0
 BuffSkillRate=0
-BuffHpRegen=20
+BuffHpRegen=10
 BuffMpRegen=0
 BuffAttack=0
 BuffDropRate=0
@@ -392,7 +392,7 @@ Icon=3
 Name=Mana Recovery
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
 BuffMAC=0
@@ -408,7 +408,7 @@ BuffExpRate=0
 BuffCraftRate=0
 BuffSkillRate=0
 BuffHpRegen=0
-BuffMpRegen=20
+BuffMpRegen=10
 BuffAttack=0
 BuffDropRate=0
 BuffGoldRate=0
@@ -416,15 +416,15 @@ BuffGoldRate=0
 [Buff-13]
 Id=14
 Icon=21
-Name=Guild House Rate
+Name=MC Buff
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
 BuffMAC=0
 BuffDc=0
-BuffMc=0
+BuffMc=3
 BuffSc=0
 BuffMaxHp=0
 BuffMaxMp=0
@@ -443,16 +443,16 @@ BuffGoldRate=0
 [Buff-14]
 Id=15
 Icon=18
-Name=Physical Damage
+Name=SC Buff
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
 BuffMAC=0
 BuffDc=0
 BuffMc=0
-BuffSc=0
+BuffSc=3
 BuffMaxHp=0
 BuffMaxMp=0
 BuffMineRate=0
@@ -473,10 +473,10 @@ Icon=15
 Name=Magic Defence
 LevelReq=0
 PointsReq=1
-TimeLimit=60
+TimeLimit=2400
 ActivationCost=0
 BuffAc=0
-BuffMAC=0
+BuffMAC=10
 BuffDc=0
 BuffMc=0
 BuffSc=0
