--- a/Configs/RandomItemStats.ini
+++ b/Configs/RandomItemStats.ini
@@ -66,6 +66,9 @@ LuckChance=0
 LuckStatChance=0
 LuckMaxStat=0
 CurseChance=0
+SlotChance=0
+SlotStatChance=0
+SlotMaxStat=0
 
 [Item1]
 MaxDuraChance=2
@@ -135,6 +138,9 @@ LuckChance=0
 LuckStatChance=0
 LuckMaxStat=0
 CurseChance=0
+SlotChance=0
+SlotStatChance=0
+SlotMaxStat=0
 
 [Item2]
 MaxDuraChance=2
@@ -204,6 +210,9 @@ LuckChance=0
 LuckStatChance=0
 LuckMaxStat=0
 CurseChance=0
+SlotChance=0
+SlotStatChance=0
+SlotMaxStat=0
 
 [Item3]
 MaxDuraChance=2
@@ -273,6 +282,9 @@ LuckChance=0
 LuckStatChance=0
 LuckMaxStat=0
 CurseChance=0
+SlotChance=0
+SlotStatChance=0
+SlotMaxStat=0
 
 [Item4]
 MaxDuraChance=2
@@ -342,6 +354,9 @@ LuckChance=0
 LuckStatChance=0
 LuckMaxStat=0
 CurseChance=0
+SlotChance=0
+SlotStatChance=0
+SlotMaxStat=0
 
 [Item5]
 MaxDuraChance=2
@@ -411,6 +426,9 @@ LuckChance=0
 LuckStatChance=0
 LuckMaxStat=0
 CurseChance=0
+SlotChance=0
+SlotStatChance=0
+SlotMaxStat=0
 
 [Item6]
 MaxDuraChance=2
@@ -480,6 +498,9 @@ LuckChance=0
 LuckStatChance=0
 LuckMaxStat=0
 CurseChance=0
+SlotChance=0
+SlotStatChance=0
+SlotMaxStat=0
 
 [Item7]
 MaxDuraChance=2
@@ -549,6 +570,9 @@ LuckChance=0
 LuckStatChance=0
 LuckMaxStat=0
 CurseChance=0
+SlotChance=0
+SlotStatChance=0
+SlotMaxStat=0
 
 [Item8]
 MaxDuraChance=255
