--- a/Configs/Setup.ini
+++ b/Configs/Setup.ini
@@ -7,13 +7,18 @@ Multithreaded=False
 ThreadLimit=1
 TestServer=False
 EnforceDBChecks=True
+MonsterProcessWhenAlone=False
+MonsterProcessWhenStacked=False
 
 [Network]
-IPAddress=172.17.72.104
+IPAddress=127.0.0.1
 Port=7000
 TimeOut=10000
 MaxUser=50
 MaxIP=5
+StartHTTPService=False
+HTTPIPAddress=http://127.0.0.1:5679/
+HTTPTrustedIPAddress=127.0.0.1
 
 [Permission]
 AllowNewAccount=True
@@ -27,11 +32,12 @@ AllowCreateArcher=False
 MaxResolution=1024
 
 [Optional]
-SafeZoneBorder=True
-SafeZoneHealing=True
+SafeZoneBorder=False
+SafeZoneHealing=False
 GatherOrbsPerLevel=True
 ExpMobLevelDifference=True
-GameMasterEffect=True
+GameMasterEffect=False
+LineMessageTimer=10
 
 [Database]
 SaveDelay=360
@@ -85,6 +91,22 @@ HellBomb1=HellBomb1
 HellBomb2=HellBomb2
 HellBomb3=HellBomb3
 
+AncientBatName=AncientBat
+TucsonGeneralEgg=GeneralTucson
+GroupInviteDelay=2000
+TradeDelay=2000
+GeneralMeowMeowMob1=StainHammerCat
+GeneralMeowMeowMob2=BlackHammerCat
+GeneralMeowMeowMob3=StrayCat
+GeneralMeowMeowMob4=CatShaman
+KingHydraxMob=Hydrax
+HornedCommanderMob=HornedSorceror
+HornedCommanderBombMob=BoulderSpirit
+ScrollMob1=WarriorScroll
+ScrollMob2=TaoistScroll
+ScrollMob3=WizardScroll
+ScrollMob4=AssassinScroll
+SnowWolfKingMob=SnowWolfKingMob
 
 [Items]
 HealRing=治愈术
@@ -263,3 +285,6 @@ Period=60
 BuffLength=10
 ExpBonus=5
 MaxBonus=24
+
+[Bonus]
+RangeAccuracyBonus=0
