同步Crystal官方配置

--- a/Configs/Language.ini
+++ b/Configs/Language.ini
@@ -1,5 +1,5 @@
 [Language]
-Welcome=Welcome to the {0} Server.
+Welcome=Welcome to the Legend of {0} Server.
 OnlinePlayers=Online Players: {0}
 LowLevel=You are not a high enough level.
 LowGold=Not enough gold.
@@ -25,6 +25,6 @@ NotInGuild=You are not in a guild
 NewMail=New mail has arrived.
 CouldNotFindPlayer=Could not find player {0}
 NoMentorship=You don't currently have a Mentorship to cancel.
-NoBagSpace=You do not have enough space.
 AllowingMentorRequests=You're now allowing mentor requests.
 BlockingMentorRequests=You're now blocking mentor requests.
+NoBagSpace=You do not have enough space.
