--- a/Configs/Setup.ini
+++ b/Configs/Setup.ini
@@ -2,9 +2,9 @@
 VersionPath=.\ClientVersionCheck\Client.Exe
 CheckVersion=True
 RelogDelay=50
-GMPassword=C#Mir 4.0
-Multithreaded=False
-ThreadLimit=1
+GMPassword=ChangeMe
+Multithreaded=True
+ThreadLimit=16
 TestServer=False
 EnforceDBChecks=True
 MonsterProcessWhenAlone=False
@@ -15,7 +15,7 @@ IPAddress=127.0.0.1
 Port=7000
 TimeOut=10000
 MaxUser=50
-MaxIP=5
+MaxIP=50
 StartHTTPService=False
 HTTPIPAddress=http://127.0.0.1:5679/
 HTTPTrustedIPAddress=127.0.0.1
@@ -28,15 +28,15 @@ AllowNewCharacter=True
 AllowDeleteCharacter=True
 AllowStartGame=True
 AllowCreateAssassin=True
-AllowCreateArcher=False
-MaxResolution=1024
+AllowCreateArcher=True
+MaxResolution=1920
 
 [Optional]
-SafeZoneBorder=False
+SafeZoneBorder=True
 SafeZoneHealing=False
 GatherOrbsPerLevel=True
-ExpMobLevelDifference=True
-GameMasterEffect=False
+ExpMobLevelDifference=False
+GameMasterEffect=True
 LineMessageTimer=10
 
 [Database]
@@ -46,9 +46,9 @@ CredxGold=30
 [Game]
 DropRate=1
 ExpRate=1
-ItemTimeOut=15
+ItemTimeOut=30
 PetTimeOut=5
-PetSave=False
+PetSave=True
 PKDelay=12
 SkeletonName=骷髅护卫
 BugBatName=小蝙蝠
@@ -90,11 +90,10 @@ HellKnight4=HellKnight4
 HellBomb1=HellBomb1
 HellBomb2=HellBomb2
 HellBomb3=HellBomb3
-
-AncientBatName=AncientBat
-TucsonGeneralEgg=GeneralTucson
 GroupInviteDelay=2000
 TradeDelay=2000
+AncientBatName=AncientBat
+TucsonGeneralEgg=GeneralTucson
 GeneralMeowMeowMob1=StainHammerCat
 GeneralMeowMeowMob2=BlackHammerCat
 GeneralMeowMeowMob3=StrayCat
@@ -102,11 +101,13 @@ GeneralMeowMeowMob4=CatShaman
 KingHydraxMob=Hydrax
 HornedCommanderMob=HornedSorceror
 HornedCommanderBombMob=BoulderSpirit
+SnowWolfKingMob=SnowWolf
 ScrollMob1=WarriorScroll
 ScrollMob2=TaoistScroll
 ScrollMob3=WizardScroll
 ScrollMob4=AssassinScroll
-SnowWolfKingMob=SnowWolfKingMob
+TeleportToNPCCost=3000
+HeroName=Hero
 
 [Items]
 HealRing=治愈术
@@ -128,11 +129,12 @@ HealthRegenWeight=10
 MaxManaRegen=8
 ManaRegenWeight=10
 MaxPoisonRecovery=6
-MaxLuck=9
-PvpCanResistMagic=True
-PvpCanResistPoison=True
-PvpCanFreeze=True
+MaxLuck=10
+PvpCanResistMagic=False
+PvpCanResistPoison=False
+PvpCanFreeze=False
 BlinkSkill=Blink
+SealDelay=60
 
 [PKTown]
 PKTownMapName=3
@@ -140,7 +142,7 @@ PKTownPositionX=848
 PKTownPositionY=677
 
 [DropGold]
-DropGold=True
+DropGold=False
 MaxDropGold=2000
 
 [Warrior]
@@ -232,8 +234,8 @@ MinMc=0
 MaxMc=0
 MinSc=0
 MaxSc=0
-StartAgility=18
-StartAccuracy=7
+StartAgility=20
+StartAccuracy=5
 StartCriticalRate=0
 StartCriticalDamage=0
 CritialRateGain=0
@@ -279,6 +281,7 @@ CreatureBlackStoneName=BlackCreatureStone
 Creature11Name=BabyMonkey
 Creature12Name=AngryBird
 Creature13Name=Foxey
+Creature14Name=MedicalRat
 
 [Rested]
 Period=60
@@ -288,3 +291,10 @@ MaxBonus=24
 
 [Bonus]
 RangeAccuracyBonus=0
+
+[Archive]
+InactiveCharacterMonths=12
+DeletedCharacterMonths=1
+
+[Observe]
+AllowObserve=True
