--- a/Configs/GuildSettings.ini
+++ b/Configs/GuildSettings.ini
@@ -1,4 +1,4 @@
-[Guilds]
+﻿[Guilds]
 MinimumLevel=22
 ExpRate=1
 PointPerLevel=1
@@ -28,7 +28,7 @@ Level-17=150000000
 Level-18=2000000000
 Level-19=3000000000
 Level-20=5000000000
-Level-21=-1
+Level-21=5000000000
 
 [Cap]
 Level-0=10
@@ -52,7 +52,7 @@ Level-17=400
 Level-18=400
 Level-19=400
 Level-20=400
-Level-21=-1
+Level-21=400
 
 [Required-0]
 ItemName=
