--- a/Configs/RefineSystem.ini
+++ b/Configs/RefineSystem.ini
@@ -1,7 +1,7 @@
-﻿[Config]
+[Config]
 OnlyRefineWeapon=True
-BaseChance=20
-Time=20
+BaseChance=60
+Time=1
 StatIncrease=1
 CritChance=10
 CritIncrease=2
