--- a/Configs/Setup.ini
+++ b/Configs/Setup.ini
@@ -1,6 +1,6 @@
-[General]
+﻿[General]
 VersionPath=.\ClientVersionCheck\Client.Exe
-CheckVersion=True
+CheckVersion=False
 RelogDelay=50
 GMPassword=ChangeMe
 Multithreaded=True
@@ -11,7 +11,7 @@ MonsterProcessWhenAlone=False
 MonsterProcessWhenStacked=False
 
 [Network]
-IPAddress=127.0.0.1
+IPAddress=172.29.4.206
 Port=7000
 TimeOut=10000
 MaxUser=50
@@ -45,7 +45,7 @@ CredxGold=30
 
 [Game]
 DropRate=1
-ExpRate=1
+ExpRate=3
 ItemTimeOut=30
 PetTimeOut=5
 PetSave=True
